# AlgorithmEngineering_AltProject

./: .gitignore  DesignVolume.nii  DesignVolume.stl  README.md  job_ours_jacobi.sbatch  parse_logs.py  plot_results.py  run_MATLAB_TOP3D_XL_GLOBAL.sbatch  run_cubic_GLOBAL.sbatch  run_cubic_LOCAL.sbatch  run_cubic_test_top3d_GLOBAL.sbatch  run_cubic_test_top3d_GLOBAL_perf.sbatch  run_cubic_test_top3d_LOCAL.sbatch  run_test_top3d.sbatch  run_top3d.sbatch  run_top3d_GLOBAL.sbatch  run_top3d_LOCAL.sbatch  run_topvoxel_GLOBAL.sbatch  submit_parallelism_test_suite.sh  submit_scaling_test_suite.sh
build_jac/: CMakeCache.txt  Makefile  cmake_install.cmake
build_mg/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp/: CMakeLists.txt  README.md  benchmark.sh  quick_test.sh
cpp/apps/: top3d_cli.cpp
cpp/include/: core.hpp  driver.hpp  fea.hpp  filter.hpp  io.hpp  io_export.hpp  isosurface.hpp  multigrid_padding.hpp  solver.hpp  top3d_xl.hpp  topvoxel.hpp  voxel_surface.hpp
cpp/include/geometry_out/: export_stl.hpp
cpp/include/multigrid/: multigrid.hpp  padding.hpp
cpp/include/multigrid/detail/: coarsest.hpp  diagonal.hpp  hierarchy.hpp  masks.hpp  transfers.hpp
cpp/include/opt/: MMAseq.hpp
cpp/include/top3d_xl/: core.hpp
cpp/include/top3d_xl/geometry/: isosurface.hpp  voxel_surface.hpp
cpp/include/top3d_xl/io/: export.hpp  topvoxel.hpp
cpp/include/top3d_xl/optimization/: MMAseq.hpp
cpp/src/: core.cpp  driver.cpp  fea.cpp  filter.cpp  io.cpp  io_export.cpp  isosurface.cpp  main.cpp  solver.cpp  top3d_xl.cpp  topvoxel.cpp  voxel_surface.cpp
cpp/src/apps/top3d_xl_cli/: main.cpp
cpp/src/core/: top3d_xl.cpp
cpp/src/geometry/: isosurface.cpp
cpp/src/io/: topvoxel.cpp
cpp/src/multigrid/: coarsest.cpp  diagonal.cpp  hierarchy.cpp  masks.cpp  preconditioner.cpp  transfers.cpp
cpp/src/opt/: MMAseq.cpp
cpp/src/optimization/: MMAseq.cpp
inputs/: README.md
matlab/: LICENSE  README.md  TOP3D_XL.m
run_tests/: README.md  benchmark_results.csv  benchmark_results.json  benchmark_results_full.md  benchmark_results_parallel.md  benchmark_results_scaling.md  job_matlab.sbatch  job_ours_jacobi.sbatch  job_ours_multigrid.sbatch  parse_logs.py  plot_results.py  run_MATLAB_TOP3D_XL_GLOBAL.sbatch  submit_parallelism_test_suite.sh  submit_scaling_test_suite.sh
run_tests/test_master/: benchmark_results.csv
run_tests/test_master/comments/: GLOBAL_20251207_215320_7002772.md  GLOBAL_20251208_014123_7003075.md  GLOBAL_20251208_021044_7003079.md  GLOBAL_20251208_022221_7003085.md  GLOBAL_20251208_072524_7002788.md
run_tests/test_master/log/: GLOBAL_20251206_234022_6988665.out  JAC_100x200x100_7002778.err  JAC_150x300x150_7002782.err  JAC_150x300x150_7002782.out  JAC_50x100x50_7002775.out  JAC_SCALING_50x100x50_16cpu_7003086.out  JAC_SCALING_50x100x50_4cpu_7003079.out  JAC_SCALING_50x100x50_8cpu_7003082.out  MAT_200x400x200_7002786.out  MAT_250x500x250_7002791.out  MAT_SCALING_50x100x50_2cpu_7003077.out  MAT_SCALING_50x100x50_32cpu_7003090.out  MAT_SCALING_50x100x50_8cpu_7003084.out  MG_100x200x100_7002777.out  MG_50x100x50_7002774.out  MG_SCALING_50x100x50_8cpu_7003081.out
run_tests/test_master_nan/comments/: GLOBAL_20251208_011604_7003073.md  GLOBAL_20251208_022839_7003086.md
run_tests/test_master_nan/log/: MAT_SCALING_50x100x50_16cpu_7003087.out  MG_150x300x150_7002781.err  MG_200x400x200_7002784.out  MG_250x500x250_7002788.out  MG_SCALING_50x100x50_1cpu_7003072.out
run_tests/test_parallel/log/: JACCOARSE_SCALING_64x128x64_16cpu_7043786.out  JACCOARSE_SCALING_64x128x64_1cpu_1thread_7043794.out  JACCOARSE_SCALING_64x128x64_1cpu_7043770.out  JACCOARSE_SCALING_64x128x64_2cpu_7043774.out  JACCOARSE_SCALING_64x128x64_32cpu_7043790.out  JACCOARSE_SCALING_64x128x64_4cpu_7043778.out  JACCOARSE_SCALING_64x128x64_8cpu_7043782.out  JAC_FINEST_SCALING_64x128x64_16cpu_7043787.out  JAC_FINEST_SCALING_64x128x64_1cpu_1thread_7043795.out  JAC_FINEST_SCALING_64x128x64_1cpu_7043771.out  JAC_FINEST_SCALING_64x128x64_2cpu_7043775.out  JAC_FINEST_SCALING_64x128x64_32cpu_7043791.out  JAC_FINEST_SCALING_64x128x64_4cpu_7043779.out  JAC_FINEST_SCALING_64x128x64_8cpu_7043783.out  MAT_SCALING_64x128x64_16cpu_7043788.out  MAT_SCALING_64x128x64_1cpu_7043772.err  MAT_SCALING_64x128x64_1cpu_7043772.out  MAT_SCALING_64x128x64_1cpu_7059549.out  MAT_SCALING_64x128x64_2cpu_7043776.out  MAT_SCALING_64x128x64_32cpu_7043792.out  MAT_SCALING_64x128x64_4cpu_7043780.out  MAT_SCALING_64x128x64_8cpu_7043784.out  MG_SCALING_64x128x64_16cpu_7043785.out  MG_SCALING_64x128x64_1cpu_1thread_7043793.out  MG_SCALING_64x128x64_1cpu_7043769.out  MG_SCALING_64x128x64_2cpu_7043773.out  MG_SCALING_64x128x64_32cpu_7043789.out  MG_SCALING_64x128x64_4cpu_7043777.out  MG_SCALING_64x128x64_8cpu_7043781.out
test/: benchmark_results.csv  benchmark_results.json  job_matlab.sbatch  job_ours_multigrid.sbatch  plot_results.py  run_cubic_test_top3d_GLOBAL_perf.sbatch  submit_parallelism_test_suite.sh  submit_scaling_test_suite.sh
test/test_master/log/: JAC_100x200x100_7002778.out  (+13 more)
test_master/: benchmark_results.json
test_master/comments/: GLOBAL_20251207_215602_7002774.md  GLOBAL_20251207_215923_7002775.md  GLOBAL_20251207_222609_7002777.md  GLOBAL_20251208_015410_7002785.md
test_master/log/: JAC_200x400x200_7002785.out  JAC_250x500x250_7002789.out  MAT_100x200x100_7002780.out  MAT_150x300x150_7002783.out  MG_SCALING_50x100x50_32cpu_7003088.out
test_master/stl/: GLOBAL_20251207_215312_7002771.stl  GLOBAL_20251208_005101_7003072.stl  GLOBAL_20251208_014123_7003075.stl  GLOBAL_20251208_020550_7003078.stl  GLOBAL_20251208_021044_7003079.stl  GLOBAL_20251208_021732_7003081.stl  GLOBAL_20251208_021848_7003082.stl  GLOBAL_20251208_022221_7003085.stl  GLOBAL_20251208_022839_7003086.stl  GLOBAL_20251208_023454_7003088.stl  GLOBAL_20251208_024319_7003089.stl
test_scaling/log/: JACCOARSE_100x200x100_7023812.out  JACCOARSE_150x300x150_7023813.out  JACCOARSE_200x400x200_7023814.out  JACCOARSE_250x500x250_7023815.out  JACCOARSE_30x60x30_7023810.out  JACCOARSE_50x100x50_7023811.out
test_scaling_blowup/log/: MG_100x200x100_7017824.err
(+90 files in other folders)
